# Ghost-Comm

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yaml  build.yml  docker-build-and-push.yml  test.yml
src/: ghostComm.c  ghostComm.h  main.c
tests/: testGhostComm.c
